[package]
name = "chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.0-rc0"
glam = "*"
chess = { git = "https://github.com/INDA22PlusPlus/dstrombe-chess.git" }
prost = "0.11.0"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
